--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start:dev": "npm run build && nodemon ./server.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "handlebars": "^4.7.8",
+    "nodemon": "^3.0.1",
     "sass": "^1.69.5",
     "vite": "^5.0.0",
     "vite-plugin-handlebars": "^1.6.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
