--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start:dev": "npm run build && nodemon ./server.js",
-    "dev": "vite",
+    "dev": "npm run build && nodemon ./server.js",
+    "start": "npm run build && node ./server.js",
+    "dev:vite": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
