--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npm run build && nodemon ./server.js",
     "start": "npm run build && node ./server.js",
-    "dev:vite": "vite",
+    "dev": "vite --open",
     "build": "vite build",
     "preview": "vite preview"
   },
