--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "handlebars": "^4.7.8",
     "nodemon": "^3.0.1",
     "sass": "^1.69.5",
+    "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vite-plugin-handlebars": "^1.6.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nanoid": "^5.0.4"
   }
 }
