--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite --open",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ./src && stylelint \"**/*.scss\""
+    "lint": "eslint ./src && stylelint \"**/*.scss\"",
+    "lint-fix": "eslint ./src --fix && stylelint \"**/*.scss\""
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
