--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "function-paren-newline": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "class-methods-use-this": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "operator-linebreak": "off"
   }
 }
