--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "@typescript-eslint/no-unused-vars": "error",
     "class-methods-use-this": "off",
     "arrow-parens": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "max-classes-per-file": "off"
   }
 }
