--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "class-methods-use-this": "off",
     "arrow-parens": "off",
     "operator-linebreak": "off",
-    "max-classes-per-file": "off"
+    "max-classes-per-file": "off",
+    "object-curly-newline": "off"
   }
 }
