--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,7 @@
     "@typescript-eslint/no-extra-semi": "off",
     "implicit-arrow-linebreak": "off",
     "function-paren-newline": "off",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "class-methods-use-this": "off",
     "arrow-parens": "off",
     "operator-linebreak": "off",
