--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-history-api-fallback": "^2.2.1",
     "nanoid": "^5.0.4"
   }
 }
