--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,8 @@
     "arrow-parens": "off",
     "operator-linebreak": "off",
     "max-classes-per-file": "off",
-    "object-curly-newline": "off"
+    "object-curly-newline": "off",
+    "semi": "off",
+    "semi-style": "off"
   }
 }
