--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,13 @@
     "max-classes-per-file": "off",
     "object-curly-newline": "off",
     "semi": "off",
-    "semi-style": "off"
+    "semi-style": "off",
+    "import/extensions": [
+      "off",
+      "always",
+      {
+        "ts": "allow"
+      }
+    ]
   }
 }
