--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint ./src && stylelint \"**/*.scss\"",
-    "lint-fix": "eslint ./src --fix && stylelint \"**/*.scss\""
+    "lint-fix": "eslint ./src --fix && stylelint \"**/*.scss\"",
+    "test": "mocha"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.11",
     "@types/express": "^4.17.21",
+    "@types/jsdom": "^21.1.6",
+    "@types/mocha": "^10.0.6",
+    "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "chai": "^5.0.3",
     "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -24,10 +30,18 @@
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
+    "esm-loader-css": "^1.0.6",
+    "esm-loader-typescript": "^1.0.6",
+    "esmock": "^2.6.3",
     "handlebars": "^4.7.8",
+    "husky": "^9.0.5",
+    "jsdom": "^24.0.0",
+    "mocha": "^10.2.0",
+    "node-esm-loader": "^0.3.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
+    "sinon": "^17.0.1",
     "stylelint": "^16.0.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-standard": "^35.0.0",
