--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "types": ["vite/client"],
+    "types": ["vite/client", "mocha"],
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
     "strict": true,
