--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test && npm run lint"
+    }
+  },
   "scripts": {
     "start": "npm run build && node ./server.js",
     "dev": "vite --open",
@@ -10,7 +15,8 @@
     "preview": "vite preview",
     "lint": "eslint ./src && stylelint \"**/*.scss\"",
     "lint-fix": "eslint ./src --fix && stylelint \"**/*.scss\"",
-    "test": "mocha"
+    "test": "mocha",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
@@ -34,7 +40,7 @@
     "esm-loader-typescript": "^1.0.6",
     "esmock": "^2.6.3",
     "handlebars": "^4.7.8",
-    "husky": "^9.0.6",
+    "husky": "^8.0.3",
     "jsdom": "^24.0.0",
     "mocha": "^10.2.0",
     "node-esm-loader": "^0.3.0",
@@ -54,11 +60,5 @@
     "express": "^4.18.2",
     "express-history-api-fallback": "^2.2.1",
     "nanoid": "^5.0.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm-run-all test lint:all",
-      "pre-push": "npm run other command"
-    }
   }
 }
