--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test && npm run lint"
+      "pre-commit": "npm run test && npm run lint-fix"
     }
   },
   "scripts": {
