--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,13 +1,6 @@
 {
   "extension": [".ts"],
   "spec": " ./src/**/*.test.ts",
-  "require": [
-    "./mochaSetup.js"
-  ],
-  "node-option": [
-    "loader=esmock",
-    "loader=./hbsLoader.js",
-    "loader=esm-loader-typescript",
-    "loader=esm-loader-css"
-  ]
+  "require": ["./mochaSetup.js"],
+  "node-option": ["loader=node-esm-loader", "loader=esmock"]
 }
