--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
     "semi-style": "off",
     "no-new": "off",
     "no-console": "off",
+    "consistent-return": "off",
     "import/extensions": [
       "off",
       "always",
